basic board layout

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
-        <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.min.css">
+        <link rel="stylesheet" href="css/style.css">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
         <!--<link rel="stylesheet" href="css/main.css"> -->
     </head>
@@ -21,12 +21,99 @@
         <![endif]-->
 
 
-        <div class="loader">
+        <div class="loader" style="display: none">
           <div class="cont">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 268.507 326.682"><path d="M265.36,320.027,42.028,326.682,0,190.479l219.9.184" fill="#41449b" opacity="0.9"></path><path d="M265.989,274.872,42.657,281.526.629,145.323l219.9.184" fill="#6769b0" opacity="0.9"></path><path d="M266.776,228.293,43.444,234.947,1.416,98.744l219.9.184" fill="#8d8ec2" opacity="0.9"></path><path d="M267.969,178.859,44.637,185.513,2.609,49.31l219.9.184" fill="#b3b4d7" opacity="0.9"></path><path d="M268.507,129.549,45.175,136.2,3.147,0l219.9.184" fill="#d9d9eb" opacity="0.9"></path></svg>
             <span>LOADING...</span>
           </div>
         </div>
+
+        <main>
+          <div class="board">
+            <div class="inner">
+              <span class="img-cont">
+                <img src="assets/boards/cover.jpg" />
+                <span class="hover-cover">
+                  <span class="notes">
+                    <h1>COVER</h1>
+                    <ul>
+                      <li>
+                        Initial page should be designed as a "table of
+                        contents" that guides users to most essential
+                        pages
+                      </li>
+                      <li>
+                        Background image slideshow
+                      </li>
+                      <li>
+                        Navigation animates away when "WATCH" clicked,
+                        YouTube / Vimeo video fades in full screen
+                        (nav etc. reappear when video pauses)
+                      </li>
+                    </ul>
+                  </span>
+                </span>
+              </span>
+            </div>
+          </div>
+
+          <div class="board">
+            <div class="inner">
+              <span class="img-cont">
+                <img src="assets/boards/lodge.jpg" />
+                <span class="hover-cover">
+                  <span class="notes">
+                    <h1>LODGE / INNER</h1>
+                    <ul>
+                      <li>
+                        Simple blog format with header image on each
+                        page. Visual-first design to emphasize natural
+                        beauty as one of the lodge's most distinguishing
+                        features
+                      </li>
+                      <li>
+                        Inner navigation broken in modules (e.g Rooms /
+                        Dining / Spa), allowing for independent and
+                        flexible content management
+                      </li>
+                      <li>
+                        Additional navigation arrows may fade into bottom
+                        corners as user scrolls past the inner navigation
+                      </li>
+                    </ul>
+                  </span>
+                </span>
+              </span>
+            </div>
+          </div>
+
+          <div class="board">
+            <div class="inner">
+              <span class="img-cont">
+                <img src="assets/boards/booking.jpg" />
+                <span class="hover-cover">
+                  <span class="notes">
+                    <h1>BOOKING</h1>
+                    <ul>
+                      <li>
+                        Booking form stays fixed on left side of viewport
+                        as user scrolls through rates and services
+                      </li>
+                      <li>
+                        Right side content fades from top as it is scrolled
+                        out of view
+                      </li>
+                      <li>
+                        Navigational arrows above rates table toggle through
+                        "Winter Packages" and "Packages with Surf"
+                      </li>
+                    </ul>
+                  </span>
+                </span>
+              </span>
+            </div>
+          </div>
+        </main>
 
 
 
