--- a/index.html
+++ b/index.html
@@ -116,6 +116,32 @@
               </span>
             </div>
           </div>
+
+          <div class="board">
+            <div class="inner">
+              <span class="img-cont">
+                <img src="assets/boards/blog.jpg" />
+                <span class="hover-cover">
+                  <span class="notes">
+                    <h1>BLOG</h1>
+                    <ul>
+                      <li>
+                        Posts appear in chronological order
+                      </li>
+                      <li>
+                        Posts can be filtered by date and/or content (title,
+                        tags, etc.)
+                      </li>
+                      <li>
+                        Post content includes text, links, images, embedded
+                        videos, and lists
+                      </li>
+                    </ul>
+                  </span>
+                </span>
+              </span>
+            </div>
+          </div>
         </main>
 
 
